image stretching fixed on feed

--- a/app/assets/stylesheets/pages/feed.scss
+++ b/app/assets/stylesheets/pages/feed.scss
@@ -7,6 +7,9 @@
       text-align: center;
       margin-bottom: 10px;
       overflow: hidden;
+        img{
+            object-fit: cover;
+            }
 
       .heart {
         position: absolute;
